--- a/portfolio.html
+++ b/portfolio.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Страница портфолио</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css
+">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    
-
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -35,8 +34,8 @@
     </header>
 
     <main>
-        <section>
-           <h2> hidden</h2>
+        <section class="section">
+           <h2>Портфолио</h2>
         <nav>
         <ul class="site-nav table">
             <li><button type="button" class="button primary">Все</button></li>
