--- a/portfolio.html
+++ b/portfolio.html
@@ -52,42 +52,42 @@
                     <p class="division">Веб-сайт</p></a>
                 </li>
                 <li>
-                    <a href=""class="link"><img src="./images/poster.jpg" alt="Постер игры в баскетбол" width="370">
+                    <a href="" class="link"><img src="./images/poster.jpg" alt="Постер игры в баскетбол" width="370">
                     <h3 class="photo-post">Постер <q lang="en">New Orlean vs Golden Star</q></h3>
                     <p class="division">Дизайн</p></a>
                 </li>
                 <li>
-                    <a href=""class="link"><img src="./images/seafood.jpg" alt="Постер ресторана морской кухни" width="370">
+                    <a href="" class="link"><img src="./images/seafood.jpg" alt="Постер ресторана морской кухни" width="370">
                     <h3 class="photo-post">Ресторан <q lang="en">Seafood</q></h3>
-                    <p class="division">Приложение</p>
+                    <p class="division">Приложение</p></a>
                 </li>
                 <li>
-                    <a href=""class="link"><img src="./images/headphones.jpg" alt="Наушники" width="370">
+                    <a href="" class="link"><img src="./images/headphones.jpg" alt="Наушники" width="370">
                     <h3 class="photo-post">Проект <q lang="en">Prime</q></h3>
                     <p class="division">Маркетинг</p></a>
                 </li>
                 <li>
-                    <a href=""class="link"><img src="./images/two-boxes.jpg" alt="Две коробки" width="370">
+                    <a href="" class="link"><img src="./images/two-boxes.jpg" alt="Две коробки" width="370">
                     <h3 class="photo-post">Проект <q lang="en">boxes</q></h3>
                     <p class="division">Маркетинг</p></a>
                 </li>
                 <li>
-                    <a href=""class="link"><img src="./images/monitor.jpg" alt="Черный монитор" width="370">
+                    <a href="" class="link"><img src="./images/monitor.jpg" alt="Черный монитор" width="370">
                     <h3 class="photo-post"><q lang="en">Inspiration has no borders</q></h3>
                     <p class="division">Маркетинг</p></a>
                 </li>
                 <li>
-                    <a href=""class="link"><img src="./images/magazine.jpg" alt="Журнал" width="370">
+                    <a href="" class="link"><img src="./images/magazine.jpg" alt="Журнал" width="370">
                     <h3 class="photo-post">Издание <q lang="en">Limited edition</q></h3>
                     <p class="division">Дизайн</p></a>
                 </li>
                 <li>
-                    <a href=""class="link"><img src="./images/label.jpg" alt="Белая бирка" width="370">
+                    <a href="" class="link"><img src="./images/label.jpg" alt="Белая бирка" width="370">
                     <h3 class="photo-post">Проект <q lang="en">LAB</q></h3>
                     <p class="division">Маркетинг</p></a>
                 </li>
                 <li>
-                    <a href=""class="link"><img src="./images/growing_business.jpg" alt="Открытая страничка на компьютере" width="370">
+                    <a href="" class="link"><img src="./images/growing_business.jpg" alt="Открытая страничка на компьютере" width="370">
                     <h3 class="photo-post"><q lang="en">Growing business</q></h3>
                     <p class="division">Приложение</p></a>
                 </li>
